# Spring-Innovation-Labs

./: .gitignore
crimescope/: .env.example  .gitignore  AGENTS.md  EVALUATION.md  Makefile  README.md  SHOWCASE.md  docker-compose.yml
crimescope/backend/: .env.example  pyproject.toml
crimescope/backend/app/: main.py  sample_data.py
crimescope/backend/app/api/: router.py
crimescope/backend/app/api/routes/: audit.py  breakdown.py  challenge.py  chat.py  compare.py  genie.py  health.py  live.py  map.py  pricing.py  regions.py  reports.py  simulator.py  trend.py  ws.py
crimescope/backend/app/core/: config.py  data_store.py  database.py  sample_loader.py  seed.py
crimescope/backend/app/data/: pipeline_stats.json  tract_acs_population.json  tract_risk_scores.json  uk_msoa_demographics.json  uk_pipeline_stats.json
crimescope/backend/app/models/: __init__.py  audit.py  challenge.py  tract.py
crimescope/backend/app/schemas/: contracts.py
crimescope/backend/tests/: test_api.py
crimescope/data_samples/: compare_package.sample.json  live_event_package.sample.json  persona_decision_package.sample.json  report_summary_package.sample.json  tract_risk_package.sample.json
crimescope/databricks/: databricks.yml
crimescope/docs/: ANTIGRAVITY_AGENT_PROMPT.md  LOCAL_RUN_AND_STATUS.md  README.md  UK_ALIGNMENT.md
crimescope/frontend/: .env.example  package-lock.json  package.json
crimescope/infra/: docker-compose.yml
crimescope/workers/: README.md  pyproject.toml
crimescope/workers/jobs/: build_tract_package.py  ingest.py  ingest_live.py  publish_live.py
(+123 files in other folders)
