[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crimescope-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for CrimeScope."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.11",
  "orjson>=3.10.15",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.38",
  "asyncpg>=0.30.0",
  "geoalchemy2>=0.17.0",
  "alembic>=1.14.0",
  "tenacity>=9.0.0",
  "httpx>=0.28.1",
  "uvicorn>=0.34.0",
  "shapely>=2.0.0",
  "openai>=1.60.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.11.2"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
