[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crimescope-workers"
version = "0.1.0"
description = "Worker stubs for CrimeScope ingestion and packaging jobs."
requires-python = ">=3.11"
dependencies = [
  "orjson>=3.10.15",
  "pydantic>=2.10.6"
]

[tool.hatch.build.targets.wheel]
packages = ["jobs"]

